<resources>
    <string name="app_name">MealPlanner</string>
    <string name="rm_name">Recipes</string>
    <string name="sl_name">List</string>

    <string name="str_meal1">Breakfast</string>
    <string name="str_meal2">Lunch</string>
    <string name="str_meal3">Dinner</string>
    <string name="str_meal4">Snacks</string>
    <string name="str_recipes">Recipes</string>
    <string name="str_meals">Meals</string>
    <string name="str_meal">Meal</string>
    <string name="str_sides">Sides</string>
    <string name="str_side">Side Dish</string>
    <string name="str_add_new">Add New</string>
    <string name="str_add_internet">Add From Website</string>
    <string name="str_new">New</string>
    <string name="str_randomize">Random</string>
    <string name="str_discard">Discard</string>
    <string name="str_save_changes">Save Changes</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_save">Save</string>
    <string name="str_load">Load</string>
    <string name="str_select">Select</string>
    <string name="str_back">Back</string>
    <string name="str_recipe_title_hint">Name</string>
    <string name="str_recipe_ing_hint">Ingredients</string>
    <string name="str_recipe_instr_hint">Instructions</string>
    <string name="str_shopping_list">Shopping List</string>
    <string name="str_delete">Delete</string>
    <string name="str_edit">Edit</string>


    <!-- menu strings -->
    <string name="menu_new">Calendar</string>
    <string name="menu_random">Random</string>
    <string name="menu_list">Shopping List</string>
    <string name="menu_rm">Recipe Manager</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_save">Save</string>
    <string name="menu_load">Load</string>
    <string name="menu_item">+Item</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_new_recipe">Add Custom</string>
    <string name="menu_new_recipe_internet">Add From site</string>
    <string name="menu_generate">Generate shopping list from meal plan</string>

    <!-- context menu strings -->
    <string name="context_view_recipe">View Recipe</string>
    <string name="context_add_side">Add Side Dish</string>
    <string name="context_randomize">Pick New Random Recipe</string>
    <string name="context_edit_list">Edit</string>
    <string name="context_blank_recipe">Add Title Only; No Recipe</string>
    <string name="context_delete_side">Delete Side Dish</string>
    <!-- warning strings -->
    <string name="warn_noCat">You must save under at least 1 category</string>
    <string name="warn_noTitle">You must have a name for your recipe</string>
    <string name="warn_snack">If saved under Snack, it can be the only category</string>
    <!-- dialog strings -->
    <string name="dialog_change_title">Input title for recipe:</string>
    <string name="dialog_website_url">Input website address for recipe:</string>
    <string name="dialog_edit_list">Edit:</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_add_item">Add item to shopping list:</string>
    <string name="dialog_delete_recipe">Are you sure you want to delete recipe</string>
    <string name="dialog_recipe_internet_error1">Error: Invalid website address</string>
    <string name="dialog_recipe_internet_error2">Error: Unable to download from website address</string>
    <string name="dialog_recipe_internet_error3">Error: Not connect to the Internet</string>
    <string name="dialog_recipe_internet_error">Error: Unable to parse recipe from website</string>
    <string name="dialog_exit">Are you sure you want to exit?</string>
    <!-- snackbar strings -->
    <string name="snackbar_sl_load">Shopping list loaded!</string>
    <string name="snackbar_sl_save">Shopping list saved!</string>
    <string name="snackbar_sl_generate">Shopping list generated from meal plan!</string>
    <string name="snackbar_undo">Nothing to Undo</string>

</resources>